--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_riverpod: ^2.4.10
   awesome_snackbar_content: ^0.1.3
   flutter_svg: ^2.0.9
+  flutter_cache_manager: ^3.3.1
 
 dev_dependencies:
   flutter_test:
